--- a/content/resources/24-221f04-th.md
+++ b/content/resources/24-221f04-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/24-221-metaphysics-free-will-fall-2004/d25d8bd69c4aeb9229282e90bb979e94_24-221f04-th.jpg
+file: /courses/24-221-metaphysics-free-will-fall-2004/d25d8bd69c4aeb9229282e90bb979e94_24-221f04-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A fork in the road. The idea of choice and freedom is discussed in this
@@ -9,8 +9,10 @@ image_metadata:
   credit: ''
   image-alt: A road sign indicating a diverging roadway.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 24-221f04-th.jpg
 uid: d25d8bd6-9c4a-eb92-2928-2e90bb979e94
 ---
+New image Upload
