--- a/content/resources/24-221f04.md
+++ b/content/resources/24-221f04.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: A fork in the road. The idea of choice and freedom is discussed in this
   course. (Photo courtesy of Kyle Johnston.)
-file: /media/courses/24-221-metaphysics-free-will-fall-2004/29beb7b2dd6c7f4b6bb33fe8d5e7ef36_24-221f04.jpg
+file: /courses/24-221-metaphysics-free-will-fall-2004/29beb7b2dd6c7f4b6bb33fe8d5e7ef36_24-221f04.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A fork in the road. The idea of choice and freedom is discussed in this
@@ -10,8 +10,10 @@ image_metadata:
   credit: ''
   image-alt: A road sign indicating a diverging roadway.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 24-221f04.jpg
 uid: 29beb7b2-dd6c-7f4b-6bb3-3fe8d5e7ef36
 ---
+A fork in the road. The idea of choice and freedom is discussed in this course. (Photo courtesy of Kyle Johnston.)
