Sync all content

--- a/content/resources/24-221f04.md
+++ b/content/resources/24-221f04.md
@@ -2,7 +2,8 @@
 content_type: resource
 description: A fork in the road. The idea of choice and freedom is discussed in this
   course. (Photo courtesy of Kyle Johnston.)
-file: /courses/24-221-metaphysics-free-will-fall-2004/29beb7b2dd6c7f4b6bb33fe8d5e7ef36_24-221f04.jpg
+file: /ol-ocw-studio-app/courses/24-221-metaphysics-free-will-fall-2004/29beb7b2dd6c7f4b6bb33fe8d5e7ef36_24-221f04.jpg
+file_size: 69023
 file_type: image/jpeg
 image_metadata:
   caption: A fork in the road. The idea of choice and freedom is discussed in this
