--- a/content/resources/24-221f04-th.md
+++ b/content/resources/24-221f04-th.md
@@ -1,7 +1,8 @@
 ---
 content_type: resource
 description: New image Upload
-file: /courses/24-221-metaphysics-free-will-fall-2004/d25d8bd69c4aeb9229282e90bb979e94_24-221f04-th.jpg
+file: /ol-ocw-studio-app/courses/24-221-metaphysics-free-will-fall-2004/d25d8bd69c4aeb9229282e90bb979e94_24-221f04-th.jpg
+file_size: 9788
 file_type: image/jpeg
 image_metadata:
   caption: A fork in the road. The idea of choice and freedom is discussed in this
